--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.11.0",
-    "nuxt": "^2.13.0"
+    "nuxt": "^2.13.0",
+    "vue-carousel-3d": "^0.2.0"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.2"
