--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/cloudinary": "^1.0.1",
     "aos": "^3.0.0-beta.6",
     "nuxt": "^2.13.0",
+    "nuxt-mail": "^1.0.2",
     "vue-carousel-3d": "^0.2.0"
   },
   "devDependencies": {
