--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.11.0",
+    "@nuxtjs/axios": "^5.12.5",
     "@nuxtjs/cloudinary": "^1.0.1",
     "aos": "^3.0.0-beta.6",
+    "emailjs-com": "^2.6.4",
     "nuxt": "^2.13.0",
     "nuxt-mail": "^1.0.2",
     "vue-carousel-3d": "^0.2.0"
