--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "emailjs-com": "^2.6.4",
     "nuxt": "^2.13.0",
     "nuxt-mail": "^1.0.2",
-    "vue-carousel-3d": "^0.2.0"
+    "vue-carousel-3d": "^0.2.0",
+    "vue-scrollto": "^2.20.0"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.2"
