--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "aos": "^3.0.0-beta.6",
     "emailjs-com": "^2.6.4",
     "nuxt": "^2.13.0",
+    "nuxt-jsonld": "^1.5.0",
     "nuxt-mail": "^1.0.2",
     "vue-carousel-3d": "^0.2.0",
     "vue-scrollto": "^2.20.0"
