--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "nuxt-jsonld": "^1.5.0",
     "nuxt-mail": "^1.0.2",
     "vue-carousel-3d": "^0.2.0",
-    "vue-scrollto": "^2.20.0"
+    "vue-scrollto": "^2.20.0",
+    "vue-social-sharing": "^3.0.8"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.2"
