--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "vue-social-sharing": "^3.0.8"
   },
   "devDependencies": {
-    "@nuxtjs/vuetify": "^1.11.2"
+    "@nuxtjs/style-resources": "^1.2.1",
+    "@nuxtjs/vuetify": "^1.11.2",
+    "fibers": "^5.0.0",
+    "sass": "^1.43.4",
+    "sass-loader": "^7.1.0"
   }
 }
